add dynamic tree menubar

--- a/resources/assets/scripts/app.template.html
+++ b/resources/assets/scripts/app.template.html
@@ -3,13 +3,13 @@
 	<div class="main_container">
 
 		<div class="col-md-3 left_col">
-			<menubar></menubar>
+			<navbar></navbar>
 		</div>
 
 		<div class="col-md-9 right_col">
 
 			<div class="top_nav">
-				<div class="nav_menu">
+				<!-- <div class="nav_menu">
 					<nav>
 						<div class="nav toggle">
 							<a id="menu_toggle">
@@ -17,7 +17,7 @@
 							</a>
 						</div>
 					</nav>
-				</div>
+				</div> -->
 			</div>
 
 			<app-container></app-container>
